# university-python

./: .gitignore  README.md  client.py  main.py  test.py
L13/: README.md
L13/1_introduction/: main_2.py
L13/2_doctest/v1/: main.py
L13/2_doctest/v2/: main.py
L13/2_doctest/v4/: incorrect_main.py  main.py
L13/2_doctest/v5/: incorrect_main.py  main.py
L13/2_doctest/v6/: main.py
L13/2_doctest/v7/: main.py
L13/3_unittest/v1/: test_main.py
L13/3_unittest/v10/: test_incorrect_main.py  test_main.py
L13/3_unittest/v11/: main.py
L13/3_unittest/v2/: test_main.py  (+1 more)
L14/: README.md
L14/threads_test/: asyncio_with_io.py  threads.py
L14/v2_inherit_thread/: main.py
L14/v4_consecutive_cpu_bound/: main.py
L14/v5_threads_cpu_bound/: main.py
L14/v6_consecutive_io_bound_requests/: main.py
L14/v8_multiprocessing_thread_pool/: main.py  unused_argument.py
L14/v9_thread_pool_executor/: map.py  submit.py
Labs/: README.md
Labs/L1/: README.instruction.md  README.md
Labs/L1/poetry-lab-1/: pyproject.toml
Labs/L1/poetry-lab-1/poetry_lab_1/: app.py
Labs/L1/poetry-lab-1/tests/: test_poetry_lab_1.py
Labs/L2/: README.md  swagger.yaml
Labs/L3/: Makefile  README.md  database.puml
Labs/L4/: Makefile  README.md  requirements.txt
Labs/L5/: Makefile  README.md
Labs/L6/: Makefile  README.md  requirements.txt
doctests/: docstring.py  main.py  main_v2.py  main_v5.py  main_v6.py  test_v6.txt
draft_1/: server.py
unittest_basic/: main.py  test_main.py  v2_test_main.py  v3_test_main.py  v4_test_main.py  v5_test_main.py  v7_test_main.py  v9_test_main.py
(+107 files in other folders)
