[tool.poetry]
name = "poetry-lab-1"
version = "0.1.0"
description = ""
authors = ["ihor-pyvovarnyk <igor.pivovarnik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
